[package]
authors = [
    "Vadzim Dambrouski <pftbest@gmail.com>",
    "Jorge Aparicio <jorge@japaric.io>"
]
description = "Peripheral access API for MSP430G2553 microcontroller"
documentation = "https://docs.rs/msp430g2553"
keywords = ["no-std", "msp430", "ti", "launchpad"]
license = "MIT OR Apache-2.0"
name = "msp430g2553"
repository = "https://github.com/pftbest/msp430g2553"
version = "0.1.0"

[dependencies]
bare-metal = "0.1.0"
msp430 = { git = "https://github.com/pftbest/msp430" }
msp430-rt = { git = "https://github.com/pftbest/msp430-rt" }
vcell = "0.1.0"

[features]
rt = []
