[package]
authors = [
    "Vadzim Dambrouski <pftbest@gmail.com>",
    "Jorge Aparicio <jorge@japaric.io>"
]
description = "Peripheral access API for MSP430G2553 microcontroller"
documentation = "https://docs.rs/msp430g2553"
keywords = ["no-std", "msp430", "ti", "launchpad"]
license = "MIT OR Apache-2.0"
name = "msp430g2553"
repository = "https://github.com/pftbest/msp430g2553"
version = "0.4.0"
edition = "2021"

[dependencies]
msp430 = "0.4.0"
vcell = "0.1.0"

[dependencies.critical-section]
optional = true
version = "1.0.0"

[dependencies.msp430-rt]
optional = true
version = "0.4.0"

[features]
rt = ["msp430-rt/device"]
